// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false 1`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --_p-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
  --_p-multi-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--_p-optgroup-a) - 0.64285714) + 6px);
  font: var(--p-font-weight-semibold) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false 2`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --_p-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
  --_p-multi-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--_p-optgroup-a) - 0.64285714) + 6px);
  font: var(--p-font-weight-semibold) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true 1`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --_p-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
  --_p-multi-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--_p-optgroup-a) - 0.64285714) + 6px);
  font: var(--p-font-weight-semibold) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  opacity: 0.4;
}
@media(forced-colors:active) {
  [role="presentation"] {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true 2`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --_p-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
  --_p-multi-select-option-b: calc(44.8px * (var(--_p-optgroup-a) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--_p-optgroup-a) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--_p-optgroup-a) - 0.64285714) + 6px);
  font: var(--p-font-weight-semibold) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  opacity: 0.4;
}
@media(forced-colors:active) {
  [role="presentation"] {
    opacity: 1;
    color: GrayText;
  }
}
"
`;
